фикс плеер виджет, поменял иконки

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <nav class="sidebar-nav">
                     <ul>
                         <li><button class="nav-button active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button></li>
-                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-wave-square"></i><span>Расширить</span></button></li>
-                        <li><button class="nav-button" data-view="upload"><i class="fas fa-upload"></i><span>Кавер</span></button></li>
+                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-clone"></i><span>Расширить</span></button></li>
+                        <li><button class="nav-button" data-view="upload"><i class="fas fa-microphone-alt"></i><span>Кавер</span></button></li>
                         <li><button class="nav-button" data-view="logs" id="logs-nav-button"><i class="fas fa-file-alt"></i><span>Логи</span><span id="logs-notification-dot" class="notification-dot"></span></button></li>
                     </ul>
                 </nav>
