функция удаления проектов

--- a/index.html
+++ b/index.html
@@ -253,6 +253,17 @@
         </div>
     </div>
 
+    <div id="confirm-modal-overlay" style="display: none;">
+        <div id="confirm-modal-box">
+            <h3 id="confirm-modal-title">Подтвердите удаление</h3>
+            <p id="confirm-modal-message">Вы уверены, что хотите удалить этот проект?</p>
+            <div class="confirm-modal-actions">
+                <button id="confirm-modal-cancel-btn">Отмена</button>
+                <button id="confirm-modal-confirm-btn">Удалить</button>
+            </div>
+        </div>
+    </div>
+
     <script type="module" src="/js/app.js"></script>
 </body>
 </html>
