--- a/index.html
+++ b/index.html
@@ -207,6 +207,13 @@
                 </div>
             </div>
         </div>
+
+        <nav class="mobile-bottom-nav">
+            <button class="mobile-nav-btn active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button>
+            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-clone"></i><span>Расширить</span></button>
+            <button class="mobile-nav-btn" data-view="upload"><i class="fas fa-microphone-alt"></i><span>Кавер</span></button>
+            <button class="mobile-nav-btn" id="mobile-library-btn"><i class="fas fa-music"></i><span>Библиотека</span></button>
+        </nav>
     </template>
 
     <div id="global-player">
