--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             </main>
 
             <div class="card library-card">
+                <button id="mobile-library-close-btn" class="mobile-only-close-btn">&times;</button>
                 <div class="library-header">
                     <div id="project-list"></div>
                     <button id="add-project-btn" class="add-project-btn"><i class="fas fa-plus"></i></button>
