--- a/index.html
+++ b/index.html
@@ -247,7 +247,6 @@
     </div>
 
     <div id="fullscreen-player-overlay">
-        <button id="fs-collapse-btn" class="fab-button"><i class="fas fa-chevron-down"></i></button>
         <img id="fs-cover" src="" alt="cover">
         <div id="fs-song-info">
             <h2 id="fs-title"></h2>
@@ -268,6 +267,7 @@
             <button class="player-btn" id="fs-next-btn"><i class="fas fa-step-forward"></i></button>
             <button class="player-btn" id="fs-repeat-btn"><i class="fas fa-repeat"></i></button>
         </div>
+        <button id="fs-close-btn" class="fab-button"><i class="fas fa-times"></i></button>
     </div>
 
     <div id="lyrics-modal-overlay">
