мини плеер на телефоне меньше чучуть, кнопка сворачивания гл плеера не отображалась

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     </div>
 
     <div id="fullscreen-player-overlay">
-        <button id="fs-close-btn" class="fab-button"><i class="fas fa-times"></i></button>
+        <button id="fs-close-btn"><i class="fas fa-times"></i></button>
         <img id="fs-cover" src="" alt="cover">
         <div id="fs-song-info">
             <h2 id="fs-title"></h2>
