сузил меню песен, логика нажатий, в глобальном плеере открывается обычный текст, убрана кнопка текст на тел, изменил название тумблера в расширить

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <form id="upload-extend-form">
                         <div class="form-grid">
                              <div class="form-row">
-                                <label class="toggle-switch"><input type="checkbox" id="ue-customMode" checked><span class="slider"></span><span>Пользовательские параметры</span></label>
+                                <label class="toggle-switch"><input type="checkbox" id="ue-customMode" checked><span class="slider"></span><span>Пользовательский режим</span></label>
                                 <div class="custom-select-wrapper">
                                     <input type="hidden" id="ue-model-value" value="V4_5PLUS">
                                     <div class="select-button" id="select-model-button-ue">V4.5+</div>
