сброс текста в формах,отступ кнопок от правого края,библиотеке на телефоне до низа, замена ярлыков

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <nav class="sidebar-nav">
                     <ul>
                         <li><button class="nav-button active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button></li>
-                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-clone"></i><span>Расширить</span></button></li>
-                        <li><button class="nav-button" data-view="upload"><i class="fas fa-microphone-alt"></i><span>Кавер</span></button></li>
+                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-outdent"></i><span>Расширить</span></button></li>
+                        <li><button class="nav-button" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button></li>
                         <li><button class="nav-button" data-view="logs" id="logs-nav-button"><i class="fas fa-file-alt"></i><span>Логи</span><span id="logs-notification-dot" class="notification-dot"></span></button></li>
                     </ul>
                 </nav>
@@ -210,8 +210,8 @@
 
         <nav class="mobile-bottom-nav">
             <button class="mobile-nav-btn active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button>
-            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-clone"></i><span>Расширить</span></button>
-            <button class="mobile-nav-btn" data-view="upload"><i class="fas fa-microphone-alt"></i><span>Кавер</span></button>
+            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-outdent"></i><span>Расширить</span></button>
+            <button class="mobile-nav-btn" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button>
             <button class="mobile-nav-btn" id="mobile-library-btn"><i class="fas fa-music"></i><span>Библиотека</span></button>
         </nav>
     </template>
