анимированный фон под цвет обложки в глобальном плеере

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -49,7 +50,7 @@
                 <nav class="sidebar-nav">
                     <ul>
                         <li><button class="nav-button active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button></li>
-                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-outdent"></i><span>Расширить</span></button></li>
+                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-arrow-right-from-line"></i><span>Расширить</span></button></li>
                         <li><button class="nav-button" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button></li>
                         <li><button class="nav-button" data-view="logs" id="logs-nav-button"><i class="fas fa-file-alt"></i><span>Логи</span><span id="logs-notification-dot" class="notification-dot"></span></button></li>
                     </ul>
@@ -210,7 +211,7 @@
 
         <nav class="mobile-bottom-nav">
             <button class="mobile-nav-btn active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button>
-            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-outdent"></i><span>Расширить</span></button>
+            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-arrow-right-from-line"></i><span>Расширить</span></button>
             <button class="mobile-nav-btn" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button>
             <button class="mobile-nav-btn" id="mobile-library-btn"><i class="fas fa-music"></i><span>Библиотека</span></button>
         </nav>
