адаптивный фон был затемнен, фикс текста караоке

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <nav class="sidebar-nav">
                     <ul>
                         <li><button class="nav-button active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button></li>
-                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-arrow-right-from-line"></i><span>Расширить</span></button></li>
+                        <li><button class="nav-button" data-view="upload-extend"><i class="fas fa-angles-right"></i><span>Расширить</span></button></li>
                         <li><button class="nav-button" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button></li>
                         <li><button class="nav-button" data-view="logs" id="logs-nav-button"><i class="fas fa-file-alt"></i><span>Логи</span><span id="logs-notification-dot" class="notification-dot"></span></button></li>
                     </ul>
@@ -58,7 +58,7 @@
                 <div class="sidebar-footer">
                     <div id="credits-container" class="credits-display" style="display: none;">
                         <span class="credits-value" id="credits-value">...</span>
-                        <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
+                        <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16-.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
                     </div>
                 </div>
             </aside>
@@ -211,7 +211,7 @@
 
         <nav class="mobile-bottom-nav">
             <button class="mobile-nav-btn active" data-view="generate"><i class="fas fa-magic"></i><span>Создать</span></button>
-            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-arrow-right-from-line"></i><span>Расширить</span></button>
+            <button class="mobile-nav-btn" data-view="upload-extend"><i class="fas fa-angles-right"></i><span>Расширить</span></button>
             <button class="mobile-nav-btn" data-view="upload"><i class="fas fa-sync"></i><span>Кавер</span></button>
             <button class="mobile-nav-btn" id="mobile-library-btn"><i class="fas fa-music"></i><span>Библиотека</span></button>
         </nav>
