--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suno Playground</title>
+
+    <!-- --- PWA МЕТА-ТЕГИ --- -->
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#161B22">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <!-- --- КОНЕЦ PWA МЕТА-ТЕГОВ --- -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -39,7 +46,6 @@
         <header class="mobile-header">
             <button id="mobile-menu-toggle"><i class="fas fa-bars"></i></button>
             <h2>Suno Playground</h2>
-            <!-- --- ИЗМЕНЕНИЕ ЗДЕСЬ: ДОБАВЛЕН КОНТЕЙНЕР ДЛЯ КРЕДИТОВ --- -->
             <div id="mobile-credits-container" class="credits-display" style="display: none;">
                 <span class="credits-value" id="mobile-credits-value">...</span>
                 <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
