главная страница редизайн

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suno Playground</title>
+    <title>AI Creative Hub</title>
 
     <!-- --- PWA МЕТА-ТЕГИ --- -->
     <link rel="manifest" href="/manifest.json">
@@ -22,9 +22,52 @@
 
     <section id="landing-page">
         <div class="landing-content">
-            <h1>Создавайте музыку с помощью ИИ</h1>
-            <p>Воплощайте свои музыкальные идеи в жизнь. От простого текста до полноценного трека за считанные секунды.</p>
-            <button id="start-button">Начать</button>
+            <div class="logo-placeholder">AI</div>
+            <h1>AI Creative Hub</h1>
+            <p>Все нейросети для генерации контента в одном месте</p>
+            
+            <div class="dashboard-grid">
+                <div class="dashboard-card" id="suno-card">
+                    <h3>Suno</h3>
+                    <p>Генерация музыки</p>
+                </div>
+                <div class="dashboard-card disabled">
+                    <h3>Midjourney</h3>
+                    <p>Генерация изображений</p>
+                    <span>Скоро</span>
+                </div>
+                <div class="dashboard-card disabled">
+                    <h3>Runway</h3>
+                    <p>Генерация видео</p>
+                    <span>Скоро</span>
+                </div>
+                <div class="dashboard-card disabled">
+                    <h3>Veo 3</h3>
+                    <p>Генерация видео</p>
+                    <span>Скоро</span>
+                </div>
+                 <div class="dashboard-card disabled">
+                    <h3>4o Image</h3>
+                    <p>Генерация изображений</p>
+                    <span>Скоро</span>
+                </div>
+            </div>
+        </div>
+        
+        <div class="faq-section">
+            <h2>Часто задаваемые вопросы (FAQ)</h2>
+            <div class="faq-item">
+                <h4>Как это работает?</h4>
+                <p>Вы выбираете нужную нейросеть, вводите текстовый запрос и получаете результат в виде музыки, изображения или видео.</p>
+            </div>
+            <div class="faq-item">
+                <h4>Нужна ли регистрация?</h4>
+                <p>Да, для доступа к генерациям требуется войти в систему. В будущем мы планируем добавить вход через Google.</p>
+            </div>
+            <div class="faq-item">
+                <h4>Как оплатить?</h4>
+                <p>В данный момент мы работаем над интеграцией платежных систем. Скоро вы сможете пополнять баланс с помощью карт Т-Банка и ЮMoney.</p>
+            </div>
         </div>
     </section>
 
@@ -45,7 +88,7 @@
         <div id="library-overlay"></div>
         <header class="mobile-header">
             <button id="mobile-menu-toggle"><i class="fas fa-bars"></i></button>
-            <h2>Suno Playground</h2>
+            <h2>AI Creative Hub</h2>
             <div id="mobile-credits-container" class="credits-display" style="display: none;">
                 <span class="credits-value" id="mobile-credits-value">...</span>
                 <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
@@ -55,7 +98,7 @@
         <div class="page-container">
             <aside class="sidebar">
                 <div class="sidebar-header">
-                    <h1>Suno Playground</h1>
+                    <h1>AI Creative Hub</h1>
                 </div>
                 <nav class="sidebar-nav">
                     <ul>
