--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Creative Hub</title>
+    
+    <!-- GOOGLE SIGN IN -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <!-- --- PWA МЕТА-ТЕГИ --- -->
     <link rel="manifest" href="/manifest.json">
@@ -62,7 +65,7 @@
             </div>
             <div class="faq-item">
                 <h4>Нужна ли регистрация?</h4>
-                <p>Да, для доступа к генерациям требуется войти в систему. В будущем мы планируем добавить вход через Google.</p>
+                <p>Да, для доступа к генерациям требуется войти в систему. В данный момент доступен вход через Google.</p>
             </div>
             <div class="faq-item">
                 <h4>Как оплатить?</h4>
@@ -74,9 +77,28 @@
     <div id="login-overlay" style="display: none;">
         <div id="login-box">
             <button id="login-close-button">&times;</button>
-            <h3>Введите ключ доступа</h3>
-            <input type="password" id="access-key-input" placeholder="••••••••">
-            <button id="access-key-button">Войти</button>
+            <h3>Вход в AI Creative Hub</h3>
+            
+            <!-- 
+              !!! ВАЖНО !!!
+              ЗАМЕНИТЕ "ВАШ_СКОПИРОВАННЫЙ_CLIENT_ID_ЗДЕСЬ" НА ВАШ РЕАЛЬНЫЙ CLIENT ID
+            -->
+            <div id="g_id_onload"
+                 data-client_id="301140605717-sc4tr9ju4t8bju6l4l282rj0hsj1vclg.apps.googleusercontent.com"
+                 data-callback="handleGoogleCredentialResponse"
+                 data-auto_prompt="false">
+            </div>
+            <div class="g_id_signin"
+                 data-type="standard"
+                 data-shape="rectangular"
+                 data-theme="outline"
+                 data-text="signin_with"
+                 data-size="large"
+                 data-logo_alignment="left">
+            </div>
+            <hr class="divider">
+            <input type="password" id="access-key-input" placeholder="••••••••" style="display: none;">
+            <button id="access-key-button" style="display: none;">Войти</button>
             <p id="login-error-message"></p>
         </div>
     </div>
@@ -91,7 +113,7 @@
             <h2>AI Creative Hub</h2>
             <div id="mobile-credits-container" class="credits-display" style="display: none;">
                 <span class="credits-value" id="mobile-credits-value">...</span>
-                <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
+                <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22-.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
             </div>
         </header>
 
@@ -111,7 +133,7 @@
                 <div class="sidebar-footer">
                     <div id="credits-container" class="credits-display" style="display: none;">
                         <span class="credits-value" id="credits-value">...</span>
-                        <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
+                        <span class="credits-icon"><svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path fill="#f7b731" d="M9.91 15.42c-1.2.7-2.62.7-3.82 0L2.14 13.1c-1.2-.7-1.95-2-1.95-3.37V6.27c0-1.37.75-2.67 1.95-3.37L6.09 0.58c1.2-.7 2.62-.7 3.82 0l3.95 2.32c1.2.7 1.95 2 1.95 3.37v3.46c0 1.37-.75 2.67-1.95 3.37l-3.95 2.32z"></path><path fill="#ffffff" d="M8 10.87a.6.6 0 01-.35-.11L5.5 9.53a.6.6 0 01-.22-.8l.74-2.16-1.63-1.63a.6.6 0 01.16-.94l2.16-.73L7.9 1.1a.6.6 0 011.08.38l.73 2.16 2.16.73a.6.6 0 01.16.94L10.4 7.57l.74 2.16a.6.6 0 01-.22-.8l-2.15 1.23a.6.6 0 01-.35.11z"></path></svg></span>
                     </div>
                 </div>
             </aside>
